Cambiado el EditText "textDni" en la vista, ahora no admite mas de una linea.
Refactorizada la clase PeticionDesignacion, ahora implementa a la clase abstracta AsyncTask para ejecutar la tarea de conexion a internet fuera del hilo de ejecucion de la vista principal.

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -69,7 +69,9 @@
             android:id="@+id/editTextDNI"
             android:layout_below="@+id/editTextLicencia"
             android:layout_alignLeft="@+id/editTextLicencia"
-            android:layout_alignRight="@+id/editTextLicencia"/>
+            android:layout_alignRight="@+id/editTextLicencia"
+        android:maxLines="1"
+        android:inputType="text" />
 
     <Button
             android:layout_width="match_parent"
